--- a/OpenSky.Client/Controls/MapView.xaml
+++ b/OpenSky.Client/Controls/MapView.xaml
@@ -20,7 +20,7 @@
                  xmlns:ui="http://schemas.modernwpf.com/2019"
                  xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                  xmlns:controls="clr-namespace:OpenSky.Client.Controls"
-                 Loaded="MapViewOnLoaded" Unloaded="MapViewOnUnloaded"
+                 Loaded="MapViewOnLoaded" Unloaded="MapViewOnUnloaded" SizeChanged="MapViewSizeChanged"
                  d:DesignHeight="450" d:DesignWidth="800" MouseWheel="MapViewOnMouseWheel">
     <UserControl.DataContext>
         <models:MapViewViewModel />
